# 498_Ass1

./: .gitignore  CPN_README.md  CPNx5.py  CPNx6.py  MLP_Jupyter.ipynb  MLPx5.py  MLPx6.py  README.md  compare_mlp_cpn.py  dash.py  data.py  pyproject.toml  regions.py  saved_datasets.json  saved_trainingsets.json  spirals_mlp.py  test_data_utils.py  test_edge_sampling.py  test_results.txt  test_sampling.py
